Refactoring around some labels.

--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -238,12 +238,12 @@
 
 \newcommand{\blockfont}{\footnotesize}
 
-\newcommand{\listingautorefname}{Listing}
-\newcommand{\algorithmautorefname}{Algorithm}
 \renewcommand{\chapterautorefname}{Chapter}
 \renewcommand{\sectionautorefname}{Section}
 \renewcommand{\subsectionautorefname}{Subsection}
 \renewcommand{\subsubsectionautorefname}{Subsection}
+\newcommand{\listingautorefname}{Listing}
+% \newcommand{\algorithmautorefname}{Algorithm}
 
 % Title
 % \pretitle{
