--- a/doc/dissertation/ABSOL_Ara_Adkins.tex
+++ b/doc/dissertation/ABSOL_Ara_Adkins.tex
@@ -171,7 +171,7 @@
 % \renewcommand{\headrulewidth}{0pt}
 % \renewcommand{\footrulewidth}{0pt}
 
-% \setlength{\parindent}{0pt}
+\setlength{\parindent}{0pt}
 % \setlength{\headheight}{14pt}
 
 \hypersetup{
@@ -233,17 +233,17 @@
     tabsize=4,
     texcomments=true,
     resetmargins=true,
-    xleftmargin=\parindent
+    % xleftmargin=\parindent
 }
 
 \newcommand{\blockfont}{\footnotesize}
 
-\newcommand{\listingautorefname}{Listing}
-\newcommand{\algorithmautorefname}{Algorithm}
 \renewcommand{\chapterautorefname}{Chapter}
 \renewcommand{\sectionautorefname}{Section}
 \renewcommand{\subsectionautorefname}{Subsection}
 \renewcommand{\subsubsectionautorefname}{Subsection}
+\newcommand{\listingautorefname}{Listing}
+% \newcommand{\algorithmautorefname}{Algorithm}
 
 % Title
 % \pretitle{
